<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/settings">

    <PreferenceCategory
        android:title="@string/generalsettings">


    <SwitchPreference android:title="@string/pulling"
        android:key="alternativepulling"
        android:defaultValue="false"
        />

    <SwitchPreference android:title="@string/debugging"
        android:key="debugging"
        android:defaultValue="false"/>

    <SwitchPreference android:title="@string/autostart"
        android:defaultValue="true"
        android:key="autostart"
        />



     <SwitchPreference android:title="@string/daynight"
            android:defaultValue="true"
            android:key="daynight"
            android:summary="@string/daynight_desc"
            />


       <SwitchPreference android:title="@string/speed_hack"
            android:defaultValue="true"
            android:key="speed_hack"
            />

        <SwitchPreference android:title="@string/changedpi"
            android:defaultValue="true"
            android:key="changedpi"
            />

        <EditTextPreference
            android:defaultValue="140"
            android:dialogTitle="DPI"
            android:inputType="number"
            android:key="dpi"
            android:dependency="changedpi"
            android:summary="@string/dpi"
            android:title="DPI" />

        <SwitchPreference android:title="@string/custom_bg"
            android:defaultValue="false"
            android:key="custombg"/>
        <Preference
            android:title="@string/bg_path"
            android:key="custom_bg_path"

            android:dependency="custombg"
            />

        <SwitchPreference android:title="@string/demo"
            android:defaultValue="false"
            android:key="demomode"
            android:summary="@string/demo_summary"
            />

</PreferenceCategory>

    <PreferenceCategory  android:title="@string/PIDAlarm">

        <SwitchPreference android:title="@string/fuel_mon_tit"
        android:defaultValue="true"
        android:key="monitorfuel"
         />
    <ListPreference
        android:title="@string/fuel_mon_tit_picker"
        android:dependency="monitorfuel"
        android:summary="@string/fuel_mon_desc"
        android:key="watch_fuel"
        android:inputType="number"
        android:entries="@array/fuelpids"
        android:entryValues="@array/fuelvalue"
        android:defaultValue="ff126b,0"/>

        <SwitchPreference android:title="@string/coolant_mon_pid_tit"
            android:defaultValue="true"
            android:key="monitorcoolant"
            android:summary="@string/coolant_mon_pid_desc"
            />

        <ListPreference
            android:title="@string/fuel_mon_tit_picker"

            android:dependency="monitorcoolant"
            android:key="coolant_pid"
            android:entries="@array/oilpids"
            android:entryValues="@array/coolantvalue"
            android:defaultValue="05,0"/>

        <EditTextPreference
            android:defaultValue="80"
            android:dependency="monitorcoolant"
            android:dialogTitle="@string/temp"
            app:useSimpleSummaryProvider="true"
            android:inputType="number"
            android:key="coolanttemp"
            android:summary="@string/temp_desc"
            android:title="@string/temp" />

</PreferenceCategory>
</PreferenceScreen>